<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SVU courses</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">username</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_register">register a new account</string>
    <string name="text_register">Don\'t have an account yet? You can</string>
    <string name="text_login">already have an account? You can</string>
    <string name="error_field_required">This feild is required!</string>
    <string name="error_invalid_password">Please enter a valid password, at least 6 characters with uppercase/lowercase letters and numbers and special symbols</string>
    <string name="error_invalid_username">Please enter a valid username!</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_mobile">Mobile Number</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_regYear">Registeration Year:</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_main">SVU Courses</string>
    <string name="hello_world">Hello world!</string>

</resources>